--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,5 +1,12 @@
+@charset "utf-8";
+@import "../../node_modules/bulma/bulma.sass";
+
+
+/* Use bulma instead of this
+
 @import url('https://fonts.googleapis.com/css?family=Karla');
 @import url('https://fonts.googleapis.com/css?family=IBM+Plex+Sans');
+
 
 html {
     font-family: sans-serif;
@@ -45,3 +52,5 @@ body {
     }
 
 }
+
+*/
